Changes done by Carlos Escalona

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<HTML>
-    <BODY>
+<<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
     <P>Team 3 rules! (original comment by Eduardo)</P>
-    </BODY>
-</HTML>
+    <P>I agree, Team 3 rules! (comment by Carlos Escalona)</P>
+  </body>
+</html>
