--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<HTML>
-    <BODY>
-    <P>Team 3 rules! (original comment by Eduardo)</P>
-    </BODY>
-</HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <h1>Hello!!!! (CV)</h1>
+  <h2>Team 3 is the best!!! (CV)</h2>
+  <p>Team 3 rules! (original comment by Eduardo)</p>
+</body>
+</html>
